...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="wdg-vF-Lp6" id="QRz-Ex-1y2"/>
                            <outlet property="delegate" destination="wdg-vF-Lp6" id="90p-Yh-eZy"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Stocks Watchlist" id="N52-9O-CUQ"/>
                    <connections>
                        <segue destination="jcS-IW-bs7" kind="show" identifier="StocksDetailSegue" action="showDetailViewController:sender:" id="S7O-Uo-dNi"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7m-QP-bhp" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1156" y="135.38230884557723"/>
        </scene>
        <!--Stock Detail-->
        <scene sceneID="db0-Ry-nyA">
            <objects>
                <viewController storyboardIdentifier="StocksDetailViewController" title="Stock Detail" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jcS-IW-bs7" customClass="StocksDetailViewController" customModule="StockQuote" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="C6X-8b-t6J">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="cOr-Co-Xu9">
                                <rect key="frame" x="10" y="256.5" width="365" height="410.5"/>
...
